# docprep

./: .gitignore  README.md  main.py  pyproject.toml  req.txt
calculator/: main.py
controllers/: docprep_controller.py  package_controller.py  settings_controller.py
core/: docx_tools.py  file_tools.py
settings/: work_directory.txt
src/calculator/: logic.py  main.py
src/controllers/: calculator_controller.py  package_controller.py  pdfreader_controller.py  settings_controller.py
src/core/: docx_tools.py  file_tools.py  pdf_tools.py  workflow.py
src/core/calculator/: logic.py  utils.py
src/ui/: main_window.py
src/ui/tabs/: calculator_tab.py  package_tab.py  pdfreader_tab.py  settings_tab.py
src/utils/: settings_utils.py  templates_utils.py  text_utils.py
templates/: del_paragraphs.txt  del_words.txt  gosposhlina.docx  zalog_contacts.docx
templates/appendices/: del_paragraphs.txt
templates/gosposhlina/: del_paragraphs.txt
templates/obyazatelstvo/: del_paragraphs.txt
ui/: main_window.py
ui/tabs/: package_tab.py  settings_tab.py
utils/: settings_utils.py  templates_utils.py  text_utils.py
