[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "docprep"
version = "0.1.0"
description = "Инструмент для предподготовки пакета документов"
authors = [
    { name = "Александр", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"

[tool.ruff]
fix = true
show-fixes = true


[tool.ruff.format]
quote-style = "single"
indent-style = "space"
